# nail-PsA

./: .gitignore  README.md  analysis.py  download.py  feature_extractor.py  hand_landmarks.py  lol.py  main.py  pyproject.toml  requirements.txt  svm.py  svm_feature_importance.py  temp.py
biometric_extraction/: hand_biometric_analyzer.py  hand_biometric_extractor.py
biometric_extraction/utils/: biomarker_helpers.py  contours.py  roi_helpers.py  transform.py
classification/: mobilenet.py  model.py
landmark_extraction/: hand_landmarker.py
landmark_extraction/utils/: utils.py
nail_image_extraction/: region_extractor.py
object_detection/: GAMWTHNMANASIU.py  contour_extraction.py  draw_landmarks_on_image.py  finger_width.py  fingers.py  fingers2.py  hand_biometric_analyzer.py  hand_clustering.py  hand_landmarks.py  joint_thickness.py  landmarks.py  landmarks_constants.py  nail_image_extractor.py  od2.py  pixel_finder.py  region_extractor.py  roi_extraction.py  sam_utils.py  segformer.py  segmentation.py  temp.py  utils.py
segmentation/: __init__.py  bg.py  net.py  utilities.py
segmentation/u2net/: data_loader.py  detect.py  u2net.py
temp/: image_annotator.py  image_extractor.py  image_processor.py  segmenter.py
