[tool.poetry]
name = "nail-psoriasis-detection"
version = "0.1.0"
description = ""
authors = ["sourland <jem2010@windowslive.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
opencv-contrib-python="4.7.0.72"
torch="2.0.0"
torchvision="0.15.1"
mediapipe = "^0.10.5"
pytorch-lightning = "^2.0.9.post0"
scipy = "^1.11.3"
numpy = "^1.26.1"
pandas = "^2.1.1"
fiftyone = "^0.22.1"
imagehash = "^4.3.1"
mobile-sam = {git = "https://github.com/ChaoningZhang/MobileSAM.git"}
timm = "^0.9.8"
rembg = "^2.0.51"
opencv-python = "^4.8.1.78"
backgroundremover = "^0.2.5"
scikit-learn = "^1.3.2"
scikit-image = "^0.22.0"
tqdm = "^4.66.1"
seaborn = "^0.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
